# refactoring

./: .gitignore  README.md
chapter1/after-refine/: version.in
chapter1/after-refine/include/: base-calculator.h  calculator-factory.h  comedy-calculator.h  drama.h  enrich-performance.h  icalculator.h  invoice.h  statement-data-generator.h  statement-data.h  statement.h  tragedy-calculator.h
chapter1/after-refine/lib/: CMakeLists.txt  base-calculator.cpp  calculator-factory.cpp  comedy-calculator.cpp  statement-data-generator.cpp  statement.cpp  tragedy-calculator.cpp
chapter1/after-refine/src/: CMakeLists.txt  main.cpp
chapter1/after-refine/test/: CMakeLists.txt  statement.cpp
chapter1/sample/: CMakeLists.txt  Makefile
chapter1/sample/include/: performance.h  play.h
chapter1/sample/lib/: drama.cpp
chapter1/sample/test/: CMakeLists.txt  main.cpp
